@@ -1,8 +1,3 @@
-# tmp workaround for scons bug
-
-import sys, os
-sys.path = [os.getcwd()] + sys.path
-
 from machine_cfg import *
 
 Default("camfr")
@@ -10,13 +5,11 @@ Default("camfr")
 # Construct build environments.
 
 env = Environment(CPPPATH = include_dirs,
+ 		  LIBPATH = library_dirs,
 	          CC  = cc,  CCFLAGS  = flags,
 		  CXX = cxx, CXXFLAGS = flags,
 	          F77 = f77, F77FLAGS = fflags,
-		  CAMFRLIB   = camfrlib,	
-		  DLLCOMMAND = dllcommand, 
-		  DLLSUFFIX  = dllsuffix,
-		  ENV        = os.environ)
+		  LIBS = libs, SHLIBPREFIX = "")
 
 env_noopt = env.Copy(CCFLAGS = flags_noopt, CXXFLAGS = flags_noopt)
 
